fix the comment section widths and fix spacing issues to better match the mockup

--- a/styles/partials/_js-comment.scss
+++ b/styles/partials/_js-comment.scss
@@ -18,7 +18,7 @@
 }
 
 .comment {
-  width: 95vw;
+  width: 90%;
 
   &__box {
     display: flex;
@@ -43,12 +43,14 @@
 
     @include tablet {
       padding: 0;
+      max-width: 100%;
     }
   }
 
   &__date {
     color: $color-5;
     font-size: 1.3rem;
+    text-align: center;
   }
 
   &__name-txt {
@@ -65,9 +67,11 @@
   &__body-txt {
     font-size: 1.3rem;
     line-height: 18px;
+    word-wrap: break-word;
 
     @include tablet {
       font-size: 1.4rem;
+      word-wrap: break-word;
     }
   }
 }
@@ -216,5 +220,24 @@ input::placeholder {
 
   @include tablet {
     font-size: 1.4rem;
+  }
+}
+
+.comment__text-div {
+  width: 70%;
+
+  @include tablet {
+    max-width: 90%;
+  }
+}
+
+@include tablet {
+  .comment__text-div {
+    width: 100%;
+  }
+}
+@include tablet {
+  .comment__date-p {
+    padding-top: 0.3rem;
   }
 }
